@@ -19,8 +19,8 @@ import org.aleksey.springnew.service.TodoService;
 import org.aleksey.springnew.types.StatusType;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -49,18 +49,14 @@ public class TodoServiceImpl implements TodoService {
 
         Todo updatedTodo = todoMapper.toEntity(todoUpdateDto);
         updatedTodo.setUserId(savedTodo.getUserId());
-        updatedTodo.setId(id);
         updatedTodo.setStatus(StatusType.IN_PROGRESS);
 
         TodoHistory todoHistory = new TodoHistory();
-        todoHistory.setTodoId(savedTodo);
+        todoHistory.setTodo(savedTodo);
         todoHistory.setOldState(savedTodo.toString());
         todoHistory.setChangedBy(1L);
 
         Todo newCreatedTodo = todoRepository.save(updatedTodo);
-
-        entityManager.refresh(newCreatedTodo);
-
         todoHistory.setNewState(newCreatedTodo.toString());
 
         todoHistoryRepository.save(todoHistory);
@@ -79,11 +75,11 @@ public class TodoServiceImpl implements TodoService {
         Todo savedTodo = todoRepository.findById(id).orElseThrow(
                 () -> new EntityNotFoundException("Can't find todo by id " + id)
         );
-        List<TodoHistory> historyList = todoHistoryRepository.findByTodoId(savedTodo);
+        List<TodoHistory> historyList = todoHistoryRepository.findByTodoId(savedTodo.getId());
 
         return historyList.stream()
                 .map(todoHistoryMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 }
